--- a/03_itensCompra.html
+++ b/03_itensCompra.html
@@ -7,12 +7,22 @@
     //As bebidas a serem compradas são: bebida1, bebida2, bebida3.
     //A lista completa de compras é: fruta1, fruta2, fruta3, bebida1, bebida2, bebida3.
 
-    //ENTRADA
+ 
+let fruta1 = prompt("Digite a primeira fruta para a lista de compras:");
+let fruta2 = prompt("Digite a segunda fruta para a lista de compras:");
+let fruta3 = prompt("Digite a terceira fruta para a lista de compras:");
 
 
-    //PROCESSAMENTO
+let frutas = [fruta1, fruta2, fruta3];
 
+let bebida1 = prompt("Digite a primeira bebida para a lista de compras:");
+let bebida2 = prompt("Digite a segunda bebida para a lista de compras:");
+let bebida3 = prompt("Digite a terceira bebida para a lista de compras:");
 
-    //SAÍDA
+let bebidas = [bebida1, bebida2, bebida3];
+
+alert('As frutas a serem compradas são:' + fruta1  + fruta2 + fruta3);
+alert('As bebidas a serem compradas são:' +bebida1 + bebida + bebida3);
+alert('A lista completa de compras é' + fruta1 + fruta2 + fruta3 + bebida1 + bebida2 + bebida3);
 
 </script>
