--- a/04_removerSUV.html
+++ b/04_removerSUV.html
@@ -5,12 +5,23 @@
     //Pergunte ao usuário qual carro deseja REMOVER da lista.
     //Apresente a lista antiga de SUVs e a nova lista, após a remoção do veículo solicitado.
 
-    //ENTRADA
+
+let carrosSUV = ["Tiggo", "Sportage", "Tucson", "EcoSport"];
 
 
-    //PROCESSAMENTO
+alert('Lista original de SUVs' + carrosSUV);
 
 
-    //SAÍDA
+let carroremovido = prompt("Qual carro SUV você deseja remover da lista? (Tiggo, Sportage, Tucson, EcoSport)");
+
+let indicecarro = carrosSUV.indexOf(carroremovido);
+if (indicecarro !== -1) {
+    carrosSUV.splice(indiceCarro, 1);
+    alert('Carro removido' + carroremovido);
+} else {
+    alert('O carro não está entre nós:' + carroremovido);
+}
+
+alert(`Nova lista ${carrosSUV.join(', ')}`);
 
 </script>
