--- a/07_acertarCor.html
+++ b/07_acertarCor.html
@@ -9,13 +9,18 @@
     //Caso não acerte, o programa deverá retornar:
     //NÃO FOI DESSA VEZ... TENTE NOVAMENTE!
 
-    //ENTRADA
 
+const nomeCores = ["azul", "amarelo", "verde", "branco", "preto", "marrom", "cinza"];
 
-    //PROCESSAMENTO
+let corInformada = prompt("Informe uma cor (azul, amarelo, verde, branco, preto, marrom, cinza):");
 
+let numeroAleatorio = Math.floor(Math.random() * 7);
 
-    //SAÍDA
+if(corInformada === nomeCores[numeroAleatorio]) {
+    alert(`PARABÉNS! VOCÊ ESTÁ COM SORTE NA COR ${corInformada}!`);
+} else {
+    alert("NÃO FOI DESSA VEZ... TENTE NOVAMENTE!");
+}
 
 
 
